fix overflow issue

--- a/style.css
+++ b/style.css
@@ -14,18 +14,19 @@
 body {
   background: #151515;
   margin: 0;
-  position: fixed;
-top: 0;
-right: 0;
-left: 0;
-bottom: 0;
+  height: 100vh;
+  /* position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0; */
 }
 
 .container {
   background: #e9f5ff;
   position: relative;
   width: 1000px;
-  height: 100vh;
+  /* height: 100vh; */
   text-align: center;
   z-index: 9999;
   margin: 0 auto;
@@ -38,10 +39,10 @@ bottom: 0;
 }
 
 .container #top-cover .hero-section{
-  position: absolute;
+  /* position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
 }
 .container  #top-cover h1 {
   color: #000;
@@ -50,6 +51,7 @@ bottom: 0;
   letter-spacing: 1.2px;
   margin: 0;
   font-weight: 100;
+  padding-top: 70px;
 }
 
 .container  #top-cover img {
@@ -95,6 +97,7 @@ input[type=button]#prev{
     height: 50px;
     width: 50px;
     padding: 0;
+    clear: left;
 }
 
 #test_status{
@@ -187,14 +190,16 @@ bottom: 40px;
 left: 40px;
 }
 
-.container #result>div{
+.container #result>.result-wrapper{
   position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%,-50%);
-background: #e9f5ff;
-height: 100vh;
-width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #e9f5ff;
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
 }
 
 .container #result>div h2{
@@ -275,4 +280,8 @@ width: 100%;
 .container #result>div{
 padding: 80px 60px;
 }
+}
+label.active{
+background: #407bff !important;
+color: #fff !important;
 }
